# hpi-ii-project-2022

./: .gitignore  README.md  console-config.yaml  docker-compose.yaml  generate-proto.sh  kowl-config.yaml  pyproject.toml
bafin_crawler/: main.py
bafin_crawler/extractor/: bafin_corporate_extractor.py  bafin_person_extractor.py  bafin_trade_extractor.py
bafin_crawler/producer/: bafin_corporate_producer.py  bafin_error_producer.py  bafin_person_producer.py  bafin_trade_producer.py
common/: base_extractor.py  base_producer.py
connect/: delete-config.sh  delete-configs.sh  elastic-announcement-sink.json  elastic-corporate-sink.json  elastic-person-sink.json  elastic-sink.json  elastic-trade-sink.json  neo4j-sink.json  push-config.sh  push-configs.sh
neo4j/conf/: apoc.conf  neo4j.conf  unicity.cypher
proto/bakdata/bafin/corporate/v1/: corporate.proto
proto/bakdata/bafin/person/v1/: person.proto
proto/bakdata/bafin/trade/v1/: trade.proto
proto/bakdata/common/error/v1/: crawl_error.proto
proto/bakdata/corporate/v1/: corporate.proto
proto/bakdata/rb/announcement/v1/: announcement.proto
proto/bakdata/rb/corporate/v1/: corporate.proto
proto/bakdata/rb/person/v1/: person.proto
proto/student/academic/v1/: transparency.proto
rb_crawler/: constant.py  extract_rb.py  main.py  rb_extractor.py  rb_producer.py
rb_crawler/extractor/: rb_announcement_extractor.py  rb_corporate_extractor.py  rb_person_extractor.py  utils.py
rb_crawler/producer/: rb_announcement_producer.py  rb_corporate_producer.py  rb_error_producer.py  rb_person_producer.py
rb_crawler/scripts/: create-topic.sh
tr_crawler/: README.md  constant.py  main.py  tr_extractor.py  tr_producer.py
