[tool.poetry]
name = "hpi-ii-project-2022"
version = "0.1.0"
description = ""
authors = ["raminqaf <ramin.gharib@bakdata.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bakdata/hpi-ii-project-2022"
packages = [
    { include = "rb_crawler" },
    { include = "bafin_crawler" },
    { include = "bakdata" }
]

[tool.poetry.dependencies]
python = "^3.9.10"
click = "8.1.3"
confluent-kafka = "1.9.2"
google = "3.0.0"
google-api-core = "2.10.1"
google-auth = "2.12.0"
googleapis-common-protos = "1.56.4"
parsel = "1.6.0"
protobuf = "4.21.7"
requests = "2.28.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true, python = "^3.8" }
isort = "^5.4"
flake8 = "^5.0.4"
autoflake = "^1.6.1"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["rb_crawler"]
skip_glob = ['build/*']
filter_files = true
known_first_party = "rb_crawler"
line_length = 100

[tool.black]
line-length = 120
target-version = ["py38", "py39"]
exclude = '''
/(
   build
 | .eggs
 | .git
 | .pytest_cache
 | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
